[package]
name = "roulette-game"
version = "1.0.0-alpha"
authors = ["VenusDev0725 <venus07250000@gmail.com>"]
edition = "2018"
description = "Cosmwasm AMM"
license = "Apache-2.0"
repository = "https://github.com/VenusDev0725/HopersSwap"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.16.0" }
cw20 = { version = "0.16.0" }
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.1.0" }
cosmwasm-schema = { version = "1.1.0" }
cw-storage-plus = { version = "0.15.0" }
thiserror = { version = "1.0.26" }
cw721-base = { version = "0.16.0" }
cw721 = { version = "0.16.0" }
rand ={version = "0.7.3"}
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }
base64 = "0.12.3"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = "0.13.4"